# bio2d_public

./: README.md  deep_representation_analysis.ipynb  setup.cfg
bio2d/: baseline_models.py  catboost_wrapper.py  data_utils.py  dataset_config.py  evaluation.py  model_training.py
bio2d/features/: engineering.py  feature_configs.py  featurize.py  hermes_code.py  pipeline.py
configs/: catboost_hyperparameters.json
