[metadata]
name = bio2d
version = 1.2.1

classifiers =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
include_package_data = True
python_requires = >=3.9,<3.10
install_requires =
    catboost==1.2.2
    chemprop==1.6.1
    dataclasses-json==0.5.14
    imbalanced-learn==0.10.1
    gensim==4.3.0
    lightgbm>=3.3.2,<4
    mordred==1.2.0
    mol2vec @ git+https://github.com/samoturk/mol2vec@850d944d5f48a58e26ed0264332b5741f72555aa
    numpy==1.22.4
    pandas==2.0.0
    rdkit==2022.9.5
    deepchem==2.8.0
    scikit-learn==1.0.2


[options.extras_require]
dev =
    black==22.3.0
    bump2version==1.0.1
    flake8==4.0.1
    mypy==0.960
    pip-tools==7.4.1
    pytest==7.1.2
    pytest-cov==3.0.0
    snapshottest==0.6.0

[options.packages.find]
where = .

[flake8]
max-line-length = 150
